RESOLVED FIXED201774
We should never fail to allocate VA for the Gigacage.
https://bugs.webkit.org/show_bug.cgi?id=201774
Summary We should never fail to allocate VA for the Gigacage.
Mark Lam
Reported 2019-09-13 14:20:04 PDT
Unfortunately, this is still not true for OS(LINUX). So, I'll leave the GIGACAGE_ALLOCATION_CAN_FAIL code in place but disable it for everything else. <rdar://problem/55352042>
Attachments
proposed patch. (1.90 KB, patch)
2019-09-13 14:25 PDT, Mark Lam
ysuzuki: review+
Mark Lam
Comment 1 2019-09-13 14:25:07 PDT
Created attachment 378753 [details] proposed patch.
Yusuke Suzuki
Comment 2 2019-09-13 14:26:55 PDT
Comment on attachment 378753 [details] proposed patch. r=me
Mark Lam
Comment 3 2019-09-13 15:07:34 PDT
Thanks for the review. Landed in r249856: <http://trac.webkit.org/r249856>.
Note You need to log in before you can comment on or make changes to this bug.