We should never fail to allocate VA for the Gigacage. https://bugs.webkit.org/show_bug.cgi?id=201774 <rdar://problem/55352042>

Reviewed by Yusuke Suzuki.

Unfortunately, this is still not true for OS(LINUX).  So, I'll leave the
GIGACAGE_ALLOCATION_CAN_FAIL code in place but disable it for everything else.

* bmalloc/Gigacage.h:



Canonical link: https://commits.webkit.org/215412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249856 268f45cc-cd09-0410-ab3c-d52691b4dbfc